--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "setup-cpp",
   "version": "0.1.0",
   "author": "Amin Yahyaabadi",
-  "description": "Install all the tools required for building and testing C++ projects.",
+  "description": "Install all the tools required for building and testing C++/C projects.",
   "repository": "https://github.com/aminya/setup-cpp",
   "license": "Apache-2.0",
   "scripts": {
