--- a/package.json
+++ b/package.json
@@ -29,10 +29,16 @@
   },
   "prettier": "prettier-config-atomic",
   "devDependencies": {
+    "@actions/core": "^1.5.0",
+    "@actions/tool-cache": "^1.7.1",
     "@types/node": "^16.9.1",
+    "@types/semver": "^7.3.8",
     "cross-env": "7.0.3",
     "eslint-config-atomic": "^1.16.2",
+    "hasha": "^5.2.2",
+    "parcel": "^2.0.0-rc.0",
     "prettier-config-atomic": "^2.0.5",
+    "semver": "^7.3.5",
     "shx": "0.3.3",
     "terser-config-atomic": "^0.1.1",
     "typescript": "^4.4.3"
@@ -55,9 +61,5 @@
     "cmake",
     "ninja",
     "meson"
-  ],
-  "dependencies": {
-    "@actions/core": "^1.5.0",
-    "parcel": "^2.0.0-rc.0"
-  }
+  ]
 }
