test: add tests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,43 +48,6 @@ jobs:
         run: |
           pnpm install
 
-  Lint:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Commit lint ✨
-        uses: wagoid/commitlint-github-action@v2
-
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.pnpm-store
-            D:\.pnpm-store
-          key: "setupcpp-cache-OS:${{ matrix.os }}-node:${{ matrix.node }}-pnpm:${{ matrix.pnpm }}-${{ hashFiles('./.npmrc') }}-deps:${{ hashFiles('./package.json') }}"
-          restore-keys: |
-            "setupcpp-cache-OS:${{ matrix.os }}"
-
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: Setup Pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: ${{ matrix.pnpm }}
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Format ✨
-        run: pnpm run test.format
-
-      - name: Lint ✨
-        run: pnpm run test.lint
+      - name: Test
+        run: |
+          pnpm test
