--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "license": "Apache-2.0",
   "scripts": {
     "format": "prettier --write .",
-    "test.format": "prettier . --check",
     "lint": "eslint . --fix",
-    "test.lint": "eslint .",
     "clean": "shx rm -rf dist",
-    "test.tsc": "tsc -p src/tsconfig.json --noEmit",
     "dev": "cross-env NODE_ENV=development parcel watch",
     "build": "cross-env NODE_ENV=production parcel build --detailed-report",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test.format": "prettier . --check",
+    "test.lint": "eslint .",
+    "test.tsc": "tsc -p src/tsconfig.json --noEmit",
+    "test": "run-p test.format test.lint test.tsc"
   },
   "engines": {
     "node": ">=12.x"
@@ -42,7 +43,8 @@
     "semver": "^7.3.5",
     "shx": "0.3.3",
     "terser-config-atomic": "^0.1.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "npm-run-all2": "^5.0.2"
   },
   "keywords": [
     "github-actions",
