--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "prepare": "npm run build",
     "test.format": "prettier . --check",
     "test.lint": "eslint .",
-    "test": "run-p test.format test.lint test.tsc"
     "test.tsc": "tsc --noEmit",
+    "test.unit": "jest",
+    "test": "run-p test.format test.lint test.tsc test.unit"
   },
   "engines": {
     "node": ">=12.x"
@@ -32,19 +33,23 @@
   "prettier": "prettier-config-atomic",
   "devDependencies": {
     "@actions/core": "^1.5.0",
+    "@actions/io": "^1.1.1",
     "@actions/tool-cache": "^1.7.1",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
     "@types/semver": "^7.3.8",
     "cross-env": "7.0.3",
     "eslint-config-atomic": "^1.16.2",
     "hasha": "^5.2.2",
+    "jest": "^27.2.0",
+    "npm-run-all2": "^5.0.2",
     "parcel": "^2.0.0-rc.0",
     "prettier-config-atomic": "^2.0.5",
     "semver": "^7.3.5",
     "shx": "0.3.3",
     "terser-config-atomic": "^0.1.1",
-    "typescript": "^4.4.3",
-    "npm-run-all2": "^5.0.2"
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
   },
   "keywords": [
     "github-actions",
