--- a/package.json
+++ b/package.json
@@ -31,21 +31,23 @@
     }
   },
   "prettier": "prettier-config-atomic",
-  "devDependencies": {
+  "dependencies": {
     "@actions/core": "^1.5.0",
     "@actions/io": "^1.1.1",
     "@actions/tool-cache": "^1.7.1",
+    "semver": "^7.3.5",
+    "hasha": "^5.2.2"
+  },
+  "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
     "@types/semver": "^7.3.8",
     "cross-env": "7.0.3",
     "eslint-config-atomic": "^1.16.2",
-    "hasha": "^5.2.2",
     "jest": "^27.2.0",
     "npm-run-all2": "^5.0.2",
     "parcel": "^2.0.0-rc.0",
     "prettier-config-atomic": "^2.0.5",
-    "semver": "^7.3.5",
     "shx": "0.3.3",
     "terser-config-atomic": "^0.1.1",
     "ts-jest": "^27.0.5",
