--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   },
   "prettier": "prettier-config-atomic",
   "dependencies": {
+    "@actions/exec": "^1.1.0",
     "@actions/core": "^1.5.0",
     "@actions/io": "^1.1.1",
     "@actions/tool-cache": "^1.7.1",
-    "semver": "^7.3.5",
-    "hasha": "^5.2.2"
+    "hasha": "^5.2.2",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
