--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
   },
   "prettier": "prettier-config-atomic",
   "dependencies": {
-    "@actions/exec": "^1.1.0",
     "@actions/core": "^1.5.0",
+    "@actions/exec": "^1.1.0",
     "@actions/io": "^1.1.1",
     "@actions/tool-cache": "^1.7.1",
     "hasha": "^5.2.2",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
     "@types/semver": "^7.3.8",
+    "@types/which": "^2.0.1",
     "cross-env": "7.0.3",
     "eslint-config-atomic": "^1.16.2",
     "jest": "^27.2.0",
