--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,6 +23,8 @@ jobs:
           - 6
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Cache
         uses: actions/cache@v2
