feat: add msvc installation

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = src/python/setup-python
 	url = https://github.com/actions/setup-python
 	branch = main
+[submodule "src/msvc/msvc-dev-cmd"]
+	path = src/msvc/msvc-dev-cmd
+	url = https://github.com/aminya/msvc-dev-cmd
+	branch = lib
