--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,9 @@ inputs:
   cppcheck:
     description: "The cppcheck version to install."
     required: false
+  opencppcoverage:
+    description: "The opencppcoverage version to install."
+    required: false
 
 runs:
   using: "node12"
