chore: use upstream msvc-dev-cmd

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = main
 [submodule "src/msvc/msvc-dev-cmd"]
 	path = src/msvc/msvc-dev-cmd
-	url = https://github.com/aminya/msvc-dev-cmd
+	url = https://github.com/ilammy/msvc-dev-cmd
 	branch = lib
