--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "semver": "^7.3.5",
     "which": "^2.0.2"
   },
+  "pnpm": {
+    "overrides": {
+      "semver": "7.3.5"
+    }
+  },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
