--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,9 @@ inputs:
   llvm:
     description: "The llvm version to install"
     required: false
+  gcc:
+    description: "The gcc version to install"
+    required: false
   msvc:
     description: "The msvc version to install"
     required: false
