--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "shx": "0.3.3",
     "terser-config-atomic": "^0.1.1",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "escape-path-with-spaces": "^1.0.0"
   },
   "keywords": [
     "github-actions",
