--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     }
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
     "@types/semver": "^7.3.8",
     "@types/which": "^2.0.1",
     "caxa": "^2.1.0",
     "cross-env": "7.0.3",
+    "cross-spawn": "^7.0.3",
     "eslint-config-atomic": "^1.16.2",
     "jest": "^27.2.0",
     "npm-run-all2": "^5.0.2",
@@ -61,8 +63,7 @@
     "shx": "0.3.3",
     "terser-config-atomic": "^0.1.1",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3",
-    "escape-path-with-spaces": "^1.0.0"
+    "typescript": "^4.4.3"
   },
   "keywords": [
     "github-actions",
