fix: untildify the installation path

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "hasha": "^5.2.2",
     "mri": "^1.2.0",
     "semver": "^7.3.5",
+    "untildify": "^4.0.0",
     "which": "^2.0.2"
   },
   "pnpm": {
