fix: enable adding paths using commands outside of the ci
enable ACTIONS_ALLOW_UNSECURE_COMMANDS inside docker build

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -114,3 +114,5 @@ jobs:
         id: docker_build
         run: |
           pnpm build.docker
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
