--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test.unit": "jest --runInBand",
     "test": "run-p test.format test.lint test.tsc test.unit",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./building/scripts/pack-exe.js",
-    "build.docker": "pnpm build && docker build -f ./building/docker/node.docker -t setup_cpp .",
+    "build.docker": "pnpm build && docker build -f ./building/docker/node.dockerfile -t setup_cpp .",
     "start.docker": "docker run -t setup_cpp ."
   },
   "engines": {
