--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@actions/exec": "^1.1.0",
     "@actions/io": "^1.1.1",
     "@actions/tool-cache": "^1.7.1",
+    "execa": "^5.1.1",
     "hasha": "^5.2.2",
     "mri": "^1.2.0",
     "semver": "^7.3.5",
