--- a/package.json
+++ b/package.json
@@ -44,21 +44,21 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "^27.0.2",
     "@types/mri": "^1.1.1",
-    "@types/node": "^16.10.3",
-    "@types/semver": "^7.3.8",
+    "@types/node": "^16.11.1",
+    "@types/semver": "^7.3.9",
     "@types/which": "^2.0.1",
     "caxa": "^2.1.0",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
     "eslint-config-atomic": "^1.16.3",
-    "jest": "^27.2.4",
+    "jest": "^27.3.1",
     "npm-run-all2": "^5.0.2",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0",
     "prettier-config-atomic": "^3.0.1",
     "shx": "0.3.3",
     "terser-config-atomic": "^0.1.1",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "engines": {
     "node": ">=12.x"
