feat: add a separate vcvarsall

--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,9 @@ inputs:
   msvc:
     description: "The msvc version to install"
     required: false
+  vcvarsall:
+    description: "If should run vcvarsall?"
+    required: false
   cmake:
     description: "The cmake version to install."
     required: false
