--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,5 @@
     "outDir": "./dist"
   },
   "compileOnSave": false,
-  "include": ["./src"],
-  "exclude": ["./src/python/setup-python", "src/msvc-dev-cmd/msvc-dev-cmd"]
+  "include": ["./src"]
 }
