--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,9 @@ inputs:
   make:
     description: "The make version to install."
     required: false
+  task:
+    description: "The task version to install."
+    required: false
   vcpkg:
     description: "The vcpkg version to install."
     required: false
