--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
+          - windows-2022
           - windows-2019
           - ubuntu-20.04
           - macos-10.15
