--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "mri": "^1.2.0",
     "msvc-dev-cmd": "git://github.com/aminya/msvc-dev-cmd#9f672c1",
     "semver": "^7.3.5",
-    "setup-python": "https://github.com/actions/setup-python",
+    "setup-python": "https://github.com/actions/setup-python#7f80679172b057fc5e90d70d197929d454754a5a",
     "untildify": "^4.0.0",
     "which": "^2.0.2"
   },
@@ -47,7 +47,7 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "^27.4.0",
     "@types/mri": "^1.1.1",
-    "@types/node": "^17.0.13",
+    "@types/node": "^17.0.14",
     "@types/semver": "^7.3.9",
     "@types/which": "^2.0.1",
     "caxa": "^2.1.0",
