--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "setup_cpp": "./dist/setup_cpp.js"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production parcel build --detailed-report",
+    "build": "cross-env NODE_ENV=production parcel build --detailed-report && npm run copy.matchers",
     "build.docker": "pnpm build && docker build -f ./building/docker/debian_node.dockerfile -t setup_cpp .",
     "bump": "ncu -u -x execa",
     "clean": "shx rm -rf dist exe",
+    "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/ && shx cp ./src/msvc/msvc_matcher.json ./dist && shx cp ./src/python/python_matcher.json ./dist/",
     "dev": "cross-env NODE_ENV=development parcel watch",
     "format": "prettier --write .",
     "lint": "eslint . --fix",
