--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "cross-env NODE_ENV=production parcel build --detailed-report && npm run copy.matchers",
     "build.docker": "pnpm build && docker build -f ./building/docker/debian_node.dockerfile -t setup_cpp .",
     "bump": "ncu -u -x execa",
-    "clean": "shx rm -rf dist exe",
+    "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/ && shx cp ./src/msvc/msvc_matcher.json ./dist && shx cp ./src/python/python_matcher.json ./dist/ && shx cp ./src/llvm/llvm_matcher.json ./dist/ ",
     "dev": "cross-env NODE_ENV=development parcel watch",
     "format": "prettier --write .",
