--- a/package.json
+++ b/package.json
@@ -46,17 +46,18 @@
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^27.4.1",
     "@types/mri": "^1.1.1",
-    "@types/node": "^17.0.18",
+    "@types/node": "^17.0.21",
     "@types/semver": "^7.3.9",
     "@types/which": "^2.0.1",
     "caxa": "^2.1.0",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "eslint": "^8.9.0",
+    "eslint": "^8.10.0",
     "eslint-config-atomic": "^1.17.0",
     "jest": "^27.5.1",
+    "npm-check-updates": "^12.5.0",
     "npm-run-all2": "^5.0.2",
     "parcel": "^2.3.2",
     "prettier": "2.4.1",
@@ -64,7 +65,7 @@
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   },
   "engines": {
     "node": ">=12.x"
@@ -91,7 +92,7 @@
   "pnpm": {
     "overrides": {
       "semver": "7.3.5",
-      "eslint": "^8.9.0",
+      "eslint": "^8.10.0",
       "prettier": "2.4.1",
       "core-js": "*",
       "babel-eslint": "npm:@babel/eslint-parser"
