test: add spell checking

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./building/scripts/pack-exe.js",
     "prepare": "npm run build",
     "start.docker": "docker run -t setup_cpp .",
-    "test": "run-p test.format test.lint test.tsc test.unit",
+    "test": "run-p test.format test.lint  test.cspell test.tsc test.unit",
+    "test.cspell": "cspell lint --no-progress --show-suggestions",
     "test.format": "prettier . --check",
     "test.lint": "eslint .",
     "test.tsc": "tsc --noEmit",
@@ -54,6 +55,7 @@
     "caxa": "^2.1.0",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
+    "cspell": "^5.18.5",
     "eslint": "^8.11.0",
     "eslint-config-atomic": "^1.17.0",
     "jest": "^27.5.1",
