fix: update dependencies

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "run-p test.tsc build.parcel copy.matchers",
     "build.docker": "pnpm build && docker build -f ./building/docker/ubuntu_node.dockerfile -t setup_cpp .",
     "build.parcel": "cross-env NODE_ENV=production parcel build --detailed-report",
-    "bump": "ncu -u -x execa,prettier && pnpm update",
+    "bump": "ncu -u -x execa && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/ && shx cp ./src/msvc/msvc_matcher.json ./dist && shx cp ./src/python/python_matcher.json ./dist/ && shx cp ./src/llvm/llvm_matcher.json ./dist/ ",
     "dev": "cross-env NODE_ENV=development parcel watch",
@@ -40,7 +40,7 @@
     "execa": "^5.1.1",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
-    "semver": "7.3.5",
+    "semver": "7.3.7",
     "setup-python": "github:actions/setup-python#7f80679172b057fc5e90d70d197929d454754a5a",
     "untildify": "^4.0.0",
     "which": "^2.0.2"
@@ -49,20 +49,20 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "^27.4.1",
     "@types/mri": "^1.1.1",
-    "@types/node": "^17.0.23",
+    "@types/node": "^17.0.24",
     "@types/semver": "^7.3.9",
     "@types/which": "^2.0.1",
     "caxa": "^2.1.0",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^5.19.5",
-    "eslint": "^8.12.0",
+    "cspell": "^5.19.7",
+    "eslint": "^8.13.0",
     "eslint-config-atomic": "^1.17.1",
     "jest": "^27.5.1",
-    "npm-check-updates": "^12.5.7",
+    "npm-check-updates": "^12.5.9",
     "npm-run-all2": "^5.0.2",
     "parcel": "^2.4.1",
-    "prettier": "2.5.1",
+    "prettier": "2.6.2",
     "prettier-config-atomic": "^3.0.9",
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
@@ -93,9 +93,9 @@
   ],
   "pnpm": {
     "overrides": {
-      "semver": "7.3.5",
-      "eslint": "^8.12.0",
-      "prettier": "2.5.1",
+      "semver": "7.3.7",
+      "eslint": "^8.13.0",
+      "prettier": "2.6.2",
       "core-js": "*",
       "babel-eslint": "npm:@babel/eslint-parser"
     },
