--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "inlineSources": true,
     "preserveSymlinks": true,
     "removeComments": false,
+    "skipLibCheck": true, // TODO: time-delta has issues
     "lib": ["ES2018", "dom"],
     "target": "ES2018",
     "allowJs": true,
