docs: update readme projects [skip ci]

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -27,12 +27,14 @@ words:
   - dyld
   - eabi
   - execa
+  - ftxui
   - gcovr
   - ghes
   - Graphviz
   - isci
   - kcov
   - LDFLAGS
+  - lefticus
   - libbinutils
   - libdw
   - libstdc
